@@ -3,6 +3,7 @@ Revision history for Perl module Git::PurePerl:
 0.38
      - add init() method to create a new repository
      - create Git::PurePerl::Loose to handle loose objects
+     - make Git::PurePerl::Pack's all_sha1s return a stream
 
 0.37 Fri Dec 12 16:18:02 GMT 2008
      - add minimal docs (thanks to tokuhirom)
